argocd/change-detection/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: change-detection
  name: change-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: change-detection
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: change-detection
    spec:
      containers:
        - image: harbor.yanello.net/ghcr/dgtlmoon/changedetection.io:0.60.7@sha256:096dae27b5d677b89f0e810fff95a70403271aa3ff3b6437952d2db9be7e74c5
          imagePullPolicy: IfNotPresent
          name: change-detection
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /datastore
              name: storage
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "256Mi"
              cpu: "100m"
      restartPolicy: Always
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: playwright
  name: playwright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playwright
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: playwright
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - image: harbor.yanello.net/docker/browserless/chrome:1.61-chrome-stable@sha256:efac47cfff3830d9a50b27d29f8bbb61949058ae336c823fbe9bd3c0d1debcc8
          imagePullPolicy: IfNotPresent
          name: playwright
          resources:
            requests:
              memory: "500Mi"
              cpu: "10m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
