argocd/change-detection/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Change Detection
    gethomepage.dev/icon: sh-changedetection
    gethomepage.dev/description: "Detect website content changes and perform meaningful actions."
    gethomepage.dev/pod-selector: app=change-detection
  labels:
    app.kubernetes.io/instance: change-detection-app
  name: change-httproute
  namespace: change-detection
spec:
  parentRefs:
  - name: cilium-private-gateway
    namespace: cilium
    sectionName: https
  hostnames:
  - change.yanello.net
  rules:
  - backendRefs:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
